added pagination and updated yaml files
